--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,767 +4,16 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
-
-$brand-orange: 		#b28442;
-$menu-grey:	   		#666;
-$link-blue:			#00e5ff;
-$manilla-yellow:	#ebe0cc;
-
-@mixin transition($transform) {
-	-webkit-transition: $transform;
-	-moz-transition: $transform;
-	-o-transition: $transform;
-	transition: $transform;
-}
-
-@mixin transform($rotate) {
-	-ms-transform: $rotate;
-    -webkit-transform: $rotate;
-    transform: $rotate;
-}
-
-@mixin border-radius($radius) {
-  	-webkit-border-radius: $radius;
-    -moz-border-radius: $radius;
-    -ms-border-radius: $radius;
-    border-radius: $radius;
-}
-
-/*all thumbnail images should be sized at 770 x 627 pixels*/
-
-@font-face {
-    font-family: 'socicon';
-    src: url('../fonts/social/socicon.eot');
-    src: url('../fonts/social/socicon.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/social/socicon.woff') format('woff'),
-         url('../fonts/social/socicon.woff2') format('woff2'),
-         url('../fonts/social/socicon.ttf') format('truetype'),
-         url('../fonts/social/socicon.svg#sociconregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    text-transform: initial;
-
-    /* icon display chart: http://www.socicon.com/chart.php */
-}
-
-
-/* ==========================================================================
-   universal styles
-   ========================================================================== */
-p, li {
-	font-family: 'Raleway', sans-serif;
-	line-height: 1.3em;
-}
-
-p {
-	font-size: 1em;
-	margin-bottom: 10px;
-}
-
-h1, h2, h3 {
-	font-family: 'Fjalla One', sans-serif;
-	text-transform: uppercase;
-	font-weight: normal;
-}
-
-h1 {
-	font-size: 2.5em;
-	margin-bottom: 0px;
-	margin-top: 0;
-}
-
-h2, h3 {
-	margin-top: 0;
-	margin-bottom: 8px;
-}
-
-h3 {
-	font-size: 1.4em;
-}
-
-h4 {
-	/*used for dates on posts where date is displayed*/
-	font-weight: normal;
-	font-style: italic;
-	font-family: 'Raleway';
-	margin-bottom: 5px;
-	font-size: 0.8em;
-}
-
-section {
-	padding: 20px 0;
-}
-
-a {
-	font-family: 'Raleway';
-}
-
-.pageIntro {
-	margin-bottom: 15px;
-	margin-top: 25px;
-
-	p {
-		padding: 0;
-		margin-top: 0;
-		margin-bottom: 0;
-		text-transform: uppercase;
-	}
-}
-
-
-/* ==========================================================================
-   main nav
-   ========================================================================== */
-
-nav#topNav {
-	position: fixed;
-	top: 0;
-	z-index: 3;
-
-	header {
-		background-color: #000;
-		padding: 0 3px;
-	}
-}
-
-.slideTopNav {
-	width: 135px
-}
-
-.hideSmall {
-	display: none;
-}
-
-#menuBtn {
-	width: 30px;
-	color: $menu-grey;
-	background-color: #000;
-    cursor: pointer;
-	font-size: 1.4em;
-	padding: 5px;
-	position:relative;
-    @include transition(transform 1s);
-
-    i {
-    	padding: 5px 0;
-    }
-}
-
-#menuBtn:hover {
-	color: $brand-orange;
-}
-
-.rotate {
-    @include transform(rotateY(180deg));
-}
-
-/*navigation menu items*/
-ul#navMenu {
-	width: 136px;
-	padding-left: 0px;
-	padding-top: 10px;
-	padding-bottom: 20px;
-	margin-top: 0;
-	margin-bottom: 0;
-	position: fixed;
-	left: 0px;
-	background-color: #000;
-
-	li {
-		list-style-type: none;
-		text-transform: uppercase;
-		line-height: 2.5em;
-		text-align: center;
-	}
-
-	a {
-		color: $menu-grey;
-	}
-
-	a:focus {
-		color: $brand-orange;
-		text-decoration: none;
-	}
-}
-
-
-/*applied on menu scroll on large screen*/
-.shrinkLogo {
-	width: 50px;
-	height: 40px;
-	margin: auto;
-	display: block;
-}
-
-img.mainLogo {
-	width: 130px;
-	height: 103px;
-    @include transition(all);
-}
-
-body a:hover, ul#navMenu a:hover {
-	color: $brand-orange;
-	
-}
-
-nav#topNav h2 {
-	text-align: center;
-	text-transform: uppercase;
-	margin: 0px;
-	color: #fff;
-}
-
-/* ==========================================================================
-   header
-   ========================================================================== */
-
-#galleryIntro {
-	position: relative;
-	background: url('../img/frontGallery.jpg') no-repeat center;
-	background-size: cover;
-	padding: 30% 0 0 0;
-	
-}
-
-#gradient {
-	display: none;
-}
-
-section#mainTitle {
-	text-align: center;
-	background: $brand-orange url('../img/wave.png') repeat repeat;
-	padding: 15px 0;
-
-	h1 {
-		font-family: 'Crimson Text', serif;
-		font-size: 3em;
-		line-height: .8em;
-		color: #fff;
-		margin-bottom: 5px;
-	}
-
-	h2 {
-		line-height: 1em;
-		font-size: 1em;
-	}
-}
-/* ==========================================================================
-   home page content
-   ========================================================================== */
-
-.thumbnail {
-	border: none;
-	box-shadow: none;
-}
-
-.homeThumb img {
-	display: block;
-	margin: auto;
-	width: 100%;
-}
-
-.homeThumb {
-	position: relative;
-	width: 90%;
-	border: 3px solid #000;
-	border-radius: 10px;
-	overflow: hidden;
-	margin: 2% auto;
-    @include transition(all .3s);
-
-}
-
-.homeThumb:hover, figure.artistThumb:hover, .artistGallery img:hover {
-	@include transform(scale(1.03));
-}
-
-.captionH2 {
-	position: relative;
-	background-color: #000;
-	padding: 10px 10px 15px 10px;
-}
-
-.homeThumb h2 {
-	margin: 0;
-	color: #fff;
-	text-align: center;
-	font-size: 19px;
-    @include transition(all .3s);
-}
-
-.homeThumb:hover h2 {
-	color: $brand-orange;
-}
-
-.captionP {
-	position: absolute;
-	bottom: 0;
-	height: 25%;
-	padding: 5px;
-	background-color: hsla(36, 46%, 48%, 0.71);
-	width: 100%;
-	margin-top: auto;
-	margin-bottom: auto;
-	
-}
-
-.captionP p {
-	font-weight: 300;
-	color: #fff;
-	margin: 0;
-	text-align: center;
-
-}
-
-p span.griffinText {
-	font-weight: bold;
-	text-transform: uppercase;
-	font-size: 15px;
-}
-
-#galleryCallOut {
-	position: relative;
-	padding: 35px;
-	background: #000 url('../img/angleWave.png') repeat repeat;
-}
-
-#galleryCallOut p {
-	text-align: center;
-	color: #fff;
-	
-}
-
-#galleryCallOutInner {
-	border: 2px dotted #fff;
-	padding: 15px;
-}
-
-#innerP {
-	margin-top: 30px;
-}
-
-#griffIconWhite {
-	display: block;
-	position: absolute;
-	top: 3%;
-	left: 0;
-	right: 0;
-	margin: auto;
-}
-
-/* ==========================================================================
-   artists page content
-   ========================================================================== */
-
-figure.artistThumb {
-    @include transition(all .3s);
-
-    h2 {
-		@include transition(all .3s);
-	    font-family: 'Raleway';
-		text-align: center;
-		font-size: 1.2em;
-		padding: 5px;
-	}
-
-	figcaption {
-		background-color: $brand-orange;
-		color: #fff;
-		margin-bottom: 25px;
-	}
-}
-
-figure.artistThumb:hover h2 {
-	color: #000;
-}
-
-/* ==========================================================================
-   artists gallery page content
-   ========================================================================== */
- .nav-title {
- 	font-family: "Raleway";
- }
-
- .artistBio {
- 	margin-bottom: 20px;
-
- 	img {
-	 	border: 3px solid #000;
-	 	margin-bottom: 10px;
-	 }
- }
-
- .artistGallery {
- 	margin-bottom: 30px;
-
- 	img {
-	    @include transition(all .3s);
-	 }
- } 
-
- .pageIntro nav span {
- 	color: $brand-orange;
- }
-
- .artwork {
- 	figcaption {
-	 	text-align: center;
-	 	text-transform: uppercase;
-	 	font-family: 'Raleway';
-	 	font-size: 1.1em;
-	 	margin: 10px 0;
-	 	color: $brand-orange
-	 }
-
-	 img {
-	 	width: 100%;
-	 }
-
-	 p {
-	 	text-transform: uppercase;
-	 	font-size: 1.2em;
-	 	text-align: center;
-	 	margin-bottom: 20px;
-	 }
- }
-
-
-/* ==========================================================================
-   services page content
-   ========================================================================== */
-#servicesCopy {
-	p {
-		text-align: center;
-
-		span {
-			font-size: 1.3em;
-			text-transform: uppercase;
-			font-weight: bold;
-		}
-	}
-
-	ul {
-		margin-top: 40px;
-		margin-right: auto;
-		margin-left: auto;
-		width: 285px;
-		
-	}
-
-	li {
-		text-transform: uppercase;
-		font-size: 1.2em;
-
-	}
-
-	a {
-		text-transform: uppercase;
-		color: $link-blue;
-	}
-}
-
-
-/* ==========================================================================
-   about page content
-   ========================================================================== */
-
-#aboutCopy, #servicesCopy {
-	padding: 30px 15px 50px 15px;
-}
-
-#aboutImg img, #servicesImg img {
-	width: 100%;
-}
-
-blockquote {
-	text-align: center;
-	font-family: 'Raleway';
-	font-size: 1.5em;
-	font-style: italic;
-	padding: 10px;
-
-	span {
-		font-style: normal;
-		font-size: .7em;
-		display: block;
-	}
-}
-
-.staff img {
-	float: right;
-	padding: 5px;
-}
-
-/* ==========================================================================
-   events page content
-   ========================================================================== */
-
-   .brown {
-   	background: $brand-orange url('../img/wave.png') repeat repeat;
-   	color: #fff;
-   	margin-bottom: 25px;
-   }
-
-   .no-padding {
-   	/*removes default padding on col classes*/
-   	padding: 0;
-   }
-
-   .eventsText {
-   	padding: 10px;
-   }
-
-   p.bold {
-   	text-transform: uppercase;
-   	font-weight: bold;
-   }
-
-   #bottomNav {
-   	margin-bottom: 25px;
-   }
-
-   #next {
-   	float: right;
-   }
-
-/* ==========================================================================
-   footer content
-   ========================================================================== */
-#galleryAddress {
-	background-color: $manilla-yellow;
-	position: relative;
-}
-
-#galleryAddress, #contact, #follow {
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-
-div#tab {
-	width: 80px;
-	height: 20px;
-	background-color: $manilla-yellow;
-	position: absolute;
-	top: -15px;
-	left: 20px;
-	border: 1px solid $manilla-yellow;
-	@include border-radius(2px);
-	z-index: 2;
-}
-
-#galleryAddressInner { 
-	margin: 0 auto 18px auto;
-	color: $brand-orange;
-	text-transform: uppercase;
-	display: block;
-	text-align: center;
-}
-
-#galleryAddressInner img {
-	display: block;
-	margin: auto;
-
-}
-
-#galleryAddressInner p {
-	margin-top: 0;
-	margin-bottom: 10px;
-}
-
-/*form*/
-
-#contact, #follow, .form-control {
-	background-color: $brand-orange;
-	color: #fff;
-}
-
-.form-control {
-	border: 2px solid #fff;
-}
-
-@mixin placeholder {
-	::-webkit-input-placeholder {@content}
-  	:-moz-placeholder           {@content}
-  	::-moz-placeholder          {@content}
-  	:-ms-input-placeholder      {@content}
-}
-
-@include placeholder {
-	color: #fff !important;
-	font-family: 'Raleway';
-   	text-transform: uppercase;
-}
-
-.antispam {
-	display: none;
-}
-
-.btn {
-	background-color: $brand-orange;
-	color: #fff;
-	border: 1px solid #fff;
-	@include border-radius(5px);
-	font-family: 'Raleway';
-	text-transform: uppercase;
-}
-
-.btn:hover {
-	background-color: #fff;
-	color: $brand-orange;
-}
-
-/*follow*/
-
-p.social {
-	font-family: 'socicon';
-	border: 3px solid #fff;
-	@include border-radius(10px);
-	font-size: 47px;
-	display: inline-block;
-	margin: 5px 5px 0 0;
-	padding: 10px 5px;
-	background-color: #fff;
-	color: $brand-orange;
-}
-
-p.social:hover {
-	background-color: $brand-orange;
-	color: #fff;
-}
-
-/*map*/
-
-#map {
-	background-color: #000;
-	padding: 15px;
-	color: #fff;
-}
-
-.google-map {
-        position: relative;
-        padding-bottom: 50%; // This is the aspect ratio
-        height: 0;
-        overflow: hidden;
-    }
-    .google-map iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        padding-bottom: 15px;
-    }
-
-/* ==========================================================================
-   media queries
-   ========================================================================== */
-    @media screen and (min-width: 750px) {
-    	/*nav menu*/
-   		.hideSmall {
-   			display: block;
-   		}
-
-    }
-   @media screen and (min-width: 700px) {
-
-   		#menuBtn {
-   			margin-left: auto;
-			margin-right: auto;
-   			margin-top: -10px;
-   		}
-
-   		#gradient {
-   			display: block;
-			padding: 70px;
-			position: relative;
-		    background: -webkit-linear-gradient(transparent, #000); /* For Safari 5.1 to 6.0 */
-		    background: -o-linear-gradient(transparent, #000); /* For Opera 11.1 to 12.0 */
-		    background: -moz-linear-gradient(transparent, #000); /* For Firefox 3.6 to 15 */
-		    background: linear-gradient(transparent, #000); /* Standard syntax (must be last) */
-		}
-
-		section#mainTitle {
-			padding: 26px 0;
-
-			h1 {
-				font-size: 4em;
-				// line-height: .8em;
-			}
-
-			h2 {
-				font-size: 1.2em;
-			}
-		}
-
-		.homeThumb {
-			width: 90%;
-		}
-
-		#galleryCallOut p {
-			padding-left: 100px;
-			padding-right: 100px;
-		}
-
-		#galleryCallOut p, p span.griffinText {
-			font-size: 20px;
-		}
-
-		p.social {
-			
-			margin-bottom: 176px;
-		}
-
-   }
-
-   @media all and (min-width: 520px) and (max-width: 990px)  {
-
-   		.captionP p {
-   			font-size: 20px;
-   		}
-
-   		.captionP {
-   			height: 20%;
-   		}
-   }
-
-   @media screen and (min-width: 990px) {
-   		#aboutCopy  {
-   			padding-bottom: 127px;
-   		}
-
-   		#servicesCopy {
-   			padding-bottom: 235px;
-   		}
-   }
-
-    @media screen and (min-width: 1200px) {
-    	.brown p {
-    		font-size: 1.2em;
-    	}
-
-    	.brown h3 {
-    		font-size: 2em;
-    	}
-
-    	#aboutCopy {
-    		padding-bottom: 239px;
-    	}
-
-    	#servicesCopy {
-    		padding-top: 125px;
-    	}
-    }
-
-   @media screen and (min-width: 1500px) {
-
-   		.captionP p {
-   			font-size: 20px;
-   		}
-
-   		.captionP {
-   			height: 20%;
-   		}
-
-   }
-
-
+@import "variables";
+@import "mixins";
+@import "normalize.scss";
+@import "main-style";
+@import "top-nav";
+@import "header";
+@import "home-page";
+@import "artists";
+@import "services";
+@import "about";
+@import "events";
+@import "footer";
+@import "media-queries";
