--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -6,7 +6,7 @@
 @import "compass/reset";
 @import "variables";
 @import "mixins";
-@import "normalize.scss";
+@import "normalize";
 @import "main-style";
 @import "top-nav";
 @import "header";
